Bug 1680249 - Don't create the coalescing key if the ip address is 0.0.0.0 or :: r=necko-reviewers,dragana

Differential Revision: https://phabricator.services.mozilla.com/D99326